--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
             <a href="javascript:void(0)" class="openbtn" onclick="openNav()">&#9776;</a>
         </div> 
     </body>
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/p5.js"></script> -->
-    <script src="p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/p5.js"></script>
     <script src="sketch.js"></script>
 </html>
